<resources>
    <string name="app_name">VideoEditor</string>
    <string name="cancel">Cancel</string>
    <string name="create_new">Create video</string>
    <string name="cut">Cut Video</string>
    <string name="end_label">End:</string>
    <string name="end_marker">End marker</string>
    <string name="enter_caption">Enter Caption</string>
    <string name="enter_video_name">Enter Video Name</string>
    <string name="ffwd">Fast forward</string>
    <string name="join">Join Video</string>
    <string name="my_video">My Creation</string>
    <string name="no">No</string>
    <string name="play">Play</string>
    <string name="rewind">Rewind</string>
    <string name="save">Save</string>
    <string name="save_prompt">An mp4 file with a similar name already exists, do you want to replace it?</string>
    <string name="setting">Setting</string>
    <string name="start_label">Start:</string>
    <string name="start_marker">Start marker</string>
    <string name="video_title">Add Slideshow Title</string>
    <string name="yes">Yes</string>
</resources>