<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:minHeight="?attr/actionBarSize"
            android:paddingRight="10dp"
            app:navigationIcon="@drawable/icon_back"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="Select Music"
            app:titleTextColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMusicList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llButton"
            android:layout_below="@+id/waveformParent" />

        <RelativeLayout
            android:id="@+id/waveformParent"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_below="@+id/toolbar"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/bkgnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <com.chettapps.videoeditor.videocutermerger.music.WaveformView
                android:id="@+id/waveform"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.chettapps.videoeditor.videocutermerger.music.MarkerView
                android:id="@+id/startmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/start_marker"
                android:nextFocusDown="@+id/endmarker"
                android:src="@drawable/marker_left" />

            <com.chettapps.videoeditor.videocutermerger.music.MarkerView
                android:id="@+id/endmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/end_marker"
                android:nextFocusUp="@+id/startmarker"
                android:nextFocusDown="@+id/info"
                android:src="@drawable/marker_right" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llButton"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/blue"
            android:gravity="center">

            <EditText
                android:id="@+id/starttext"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/start_label"
                android:gravity="center"
                android:hint="Start"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_fa"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/rew"
                style="@android:style/MediaButton"
                android:layout_width="64dp"
                android:layout_height="52dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_card_transparent"
                android:clickable="true"
                android:contentDescription="@string/rewind"
                android:src="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton"
                android:layout_width="71dp"
                android:layout_height="52dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_card_transparent"
                android:clickable="true"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ffwd"
                style="@android:style/MediaButton"
                android:layout_width="64dp"
                android:layout_height="52dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/bg_card_transparent"
                android:clickable="true"
                android:contentDescription="@string/ffwd"
                android:src="@android:drawable/ic_media_next" />

            <EditText
                android:id="@+id/endtext"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/end_label"
                android:gravity="center"
                android:hint="End"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_fa"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/waveformParent"
            android:background="@drawable/stack_drop_shadow_bottom_top"
            android:minHeight="6dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rvMusicList"
            android:background="@drawable/stack_drop_shadow_bottom_top"
            android:minHeight="6dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/stack_drop_shadow"
            android:minHeight="6dp" />
    </RelativeLayout>
</LinearLayout>
